# gregory

./: .coveragerc  .gitignore  README.md  setup.cfg  setup.py
.github/workflows/: python-package.yml
gregory/: _version.py
gregory/dataclass/: time_series_data.py
gregory/granularity/: granularity.py  granularity_factory.py  utils.py
gregory/timeseries/: batches.py  expr.py  inference.py  processing.py  time_series.py
gregory/util/: agenda.py  bisect.py  decorators.py  dictionaries.py  relativedelta.py
test/: test_expr.py  test_time_series.py  test_time_series_batch.py  test_time_series_expr.py  test_time_series_processing.py  test_util_dictionaries.py  utils.py
