[options]
file_insertion_enabled = 1
raw_enabled = 1


[metadata]
name = gregory
description = Python framework to manage time series structured as one-level dictionaries
long_description = file: README.md
long_description_content_type = text/markdown
author = Luca Spartera
author_email = synstratos.dev@gmail.com
